--- a/config.example.json
+++ b/config.example.json
@@ -14,6 +14,9 @@
       },
       "Npm": {
         "paths": [ "/path/to/npm/project" ]
+      },
+      "DrupalDocker": {
+        "labels": [ "drupal9" ]
       }
     }
   }
